<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.josholadele.moviehub.MovieDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/poster_description"
            android:scaleType="centerCrop"
            android:src="@drawable/inter" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/synopsis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="#b3000000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/movie_icon_small"
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:background="@color/colorPrimary"
                        android:padding="6dp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Release Date"
                            android:textAlignment="textStart"
                            android:textColor="#888"
                            android:textSize="18sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="04/2017"
                            android:textColor="#fff"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Average Rating"
                            android:textColor="#888"
                            android:textSize="18sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/average_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="6.4/10"
                            android:textColor="#fff"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>
                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:weightSum="2">-->

                <!--<TextView-->
                <!--android:id="@+id/average_rating"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="1dp"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/colorPrimaryDark"-->
                <!--android:gravity="center"-->
                <!--android:padding="5dp"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="18sp" />-->

                <!--<TextView-->
                <!--android:id="@+id/release_date"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="1dp"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:gravity="center"-->
                <!--android:padding="5dp"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="18sp" />-->
                <!--</LinearLayout>-->

                <LinearLayout
                    android:id="@+id/synopsis_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/plot_synopsis"
                        android:textColor="#888"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/trailer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/title_trailers"
                        android:textColor="#888"
                        android:textSize="20sp"
                        android:textStyle="italic" />


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ProgressBar
                            android:id="@+id/trailer_loading"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:indeterminate="true" />

                        <LinearLayout
                            android:id="@+id/trailer_frame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <!--<LinearLayout-->
                            <!--android:id="@+id/trailer_row"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:gravity="center"-->
                            <!--android:orientation="horizontal">-->

                            <!--<Button-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="35dp"-->
                            <!--android:layout_margin="5dp"-->
                            <!--android:text="Extended Big Game Spot" />-->

                            <!--<Button-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="35dp"-->
                            <!--android:layout_margin="5dp"-->
                            <!--android:text="Trailer 2" />-->
                            <!--</LinearLayout>-->

                        </LinearLayout>
                    </FrameLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/review_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/review"
                            android:textColor="#888"
                            android:textSize="20sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/toggle_review"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="30dp"
                            android:text="@string/show_review"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>


</LinearLayout>
